update production.rb for assets on heroku

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+     "postinstall": "./node_modules/.bin/webpack"
   },
   "keywords": [],
   "author": "",
@@ -19,5 +20,10 @@
     "flux": "^2.1.1",
     "react": "^15.0.1",
     "react-dom": "^15.0.1"
-  }
+  },
+  "engines": {
+  "node": "5.10.1", 
+  "npm": "3.8.3"
+},
+
 }
