--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pokedex-solution",
+  "name": "ziggurat",
   "version": "1.0.0",
   "description": "**Gotta Fetch 'em All**",
   "main": "index.js",
@@ -22,6 +22,7 @@
     "react": "^0.14.2",
     "react-addons-linked-state-mixin": "^0.14.2",
     "react-dom": "^0.14.2",
+    "react-modal": "^1.2.1",
     "react-router": "^2.0.0",
     "webpack": "^1.12.4"
   },
