--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.1.4",
     "flux": "^2.1.1",
+    "imports-loader": "^0.6.5",
     "react": "^0.14.2",
     "react-addons-linked-state-mixin": "^0.14.2",
     "react-dom": "^0.14.2",
