--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-dom": "^0.14.2",
     "react-modal": "^1.2.1",
     "react-router": "^2.0.0",
-    "webpack": "^1.12.4"
+    "webpack": "^1.12.4",
+    "react-masonry-component": "^4.0.2"
   },
   "engines": {
     "node": "4.2.1",
