--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
     "imports-loader": "^0.6.5",
     "react": "^0.14.2",
     "react-dom": "^0.14.2",
+    "react-masonry-component": "^4.0.2",
     "react-modal": "^1.2.1",
     "react-router": "^2.0.0",
-    "webpack": "^1.12.4",
-    "react-masonry-component": "^4.0.2"
+    "react-timeago": "^3.0.0",
+    "webpack": "^1.12.4"
   },
   "engines": {
     "node": "4.2.1",
