--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "imports-loader": "^0.6.5",
     "react": "^0.14.2",
     "react-dom": "^0.14.2",
+    "react-infinite": "^0.9.2",
     "react-masonry-component": "^4.0.2",
     "react-modal": "^1.2.1",
     "react-router": "^2.0.0",
